<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/grid_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:rowCount="3">

    <Button
        android:text="@string/button_1"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_margin="4dp" />

    <Button
        android:text="@string/button_2"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_margin="4dp" />

    <Button
        android:text="@string/button_3"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_margin="4dp" />

    <Button
        android:text="@string/button_4"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_margin="4dp" />

    <Button
        android:text="@string/big_button"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill"
        android:layout_margin="4dp" />

</GridLayout>